@@ -1,0 +1,6 @@
+#!/usr/bin/env python
+
+import sys
+from wxPython.tools.img2py import main
+main(sys.argv[1:])
+
