@@ -155,6 +155,8 @@ respond to mouse events and etc.
 Changed the wxDateTime.Parse* methods to return an int that will be -1
 on failure, and the index where parsing stopped otherwise.
 
+Moved tools to be a Python package in wxPython.tools, added scripts to
+import and launch each tool.
 
 
 
